openmcp-loadbalancing-controller/test_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: loadbalancing-controller
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: openmcp-apiserver
          servicePort: 80
